--- a/index.html
+++ b/index.html
@@ -4,11 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>practice for Roshdana Typescript course</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <div class="AddInformation">
+        <form> <!-- action="#",   method="post"--> 
+            <fieldset>
+                <legend>اطلاعات را وارد کنید :</legend>
+                </tr>
+                <table class="addInformationTable">
+                    <tr>
+                        <th>نام :</th>
+                        <td>
+                            <input type="text" id="getName" placeholder="نام خود را وارد کنید " required>
+                        </td>
+                        <th>شهر :</th>
+                        <td> 
+                            <input type="text" id="getCity" placeholder="شهر خود را وارد کنید" required> 
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>کشور :</th>
+                        <td>
+                            <input type="text" id="getCountry" placeholder="کشور خود را وارد کنید "required>
+                        </td>
+                        <th>سن :</th>
+                        <td>
+                            <input type="number" id="getAge" placeholder=" سن خود را وارد کنید" required>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id="addInfoSubmit" colspan="4">
+                            <input id="submit" type="submit" value="اضافه کردن به جدول">
+                        </td>
+                    </tr>
+                </table>
+            </fieldset>
+        </form>
+        
+
+    </div>
+
 
     <script src="app.js"></script>
 </body>
