add code for show Information(app.js & style.css)

--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
 
     </div>
 
+    
+    <div class="ShowInformation">
+        <table class="InformationTable">
+            <tr class="MainRow">
+                <th id="Row"> ردیف </th>
+                <th id="Name"> نام </th>
+                <th id="City"> شهر </th>
+                <th id="Country"> کشور </th>
+                <th id="Age"> سن </th>
+                <th id="Edit"> ویرایش </th>
+                <th id="Delete"> حذف </th>
+    
+            </tr>
+    </div>
 
     <script src="app.js"></script>
 </body>
